fixing issues + adding buildpacks